--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dnd": "^16.0.1",
@@ -15,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +43,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv-webpack": "^8.1.0",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "browser": {
+    "crypto": false
   }
 }
