--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
