--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "dotenv-webpack": "^8.1.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "webpack-node-externals": "^3.0.0"
   },
   "browser": {
