--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-cool-onclickoutside": "^1.7.0",
@@ -49,9 +50,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.19",
     "dotenv-webpack": "^8.1.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "webpack-node-externals": "^3.0.0"
   },
   "browser": {
