--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "moment": "^2.30.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-pdf": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
