--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "path": "^0.12.7",
+    "pdfjs-dist": "^4.6.82",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-cool-onclickoutside": "^1.7.0",
