--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "color-convert": "^2.0.1",
     "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
+    "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "path": "^0.12.7",
