--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "color-convert": "^2.0.1",
+    "docx-preview": "^0.3.3",
     "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
     "jspdf": "^2.5.2",
