--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docx-preview": "^0.3.3",
     "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
+    "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
